Changes to the services

--- a/services.html
+++ b/services.html
@@ -3,5 +3,10 @@
     <title>services</title>
 </head>
 <body>
-    <h1>services we offer</h1>
+    <h1>services we offer are very needed in today's life</h1>
+    <ol>
+        <li>cleaning</li>
+        <li>driving</li>
+        <li>security</li>
+    </ul>
 </body>
