added another paragraph

--- a/home.html
+++ b/home.html
@@ -5,4 +5,5 @@
 <body>
     <h1>This is git exercise i am doing</h1>
     <p>Come and we learn together</p>
+    <p>It is always interesting to be with us</p>
 </body>
