other changes made to footer page

--- a/footer.html
+++ b/footer.html
@@ -5,5 +5,5 @@
 <body>
     <h1>Visit us on our website</h1>
     <p>we work from Kigali,Remera</p>
-    <p>Thank you</p>
+    <p>Thank you for coming</p>
 </body>
